--- a/notebook/experiment.ipynb
+++ b/notebook/experiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4b054c67",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e856fe63",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_123744/1505384709.py:1: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_127413/1505384709.py:1: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_daily_rent = pd.read_csv(\"../data/raw/daily_rent_detail.csv\")\n"
      ]
     }
@@ -42,26 +42,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "307d93dc",
+   "metadata": {},
+   "source": [
+    "## 2. Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "2a195f1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_daily_rent_copy = df_daily_rent.copy()\n",
+    "df_weather_copy = df_weather.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9de0fec",
+   "metadata": {},
+   "source": [
+    "## 3. Data Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dd44a09e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Retrive necessary features from raw data\n",
-    "df_weather_needs = df_weather[[\"datetime\",\"icon\"]].copy()\n",
-    "df_daily_rent_needs = df_daily_rent[[\"started_at\"]].copy()\n",
+    "df_weather_needs = df_weather_copy[[\"datetime\",\"icon\"]]\n",
+    "df_daily_rent_needs = df_daily_rent_copy[[\"started_at\"]]\n",
     "\n",
     "# Create necessary data by merging from raw data \n",
-    "df_temp = pd.to_datetime(df_daily_rent_needs[\"started_at\"], format='mixed')\n",
-    "df_daily_rent_needs[\"datetime\"] = pd.DataFrame(df_temp.dt.strftime('%Y-%m-%d'))\n",
+    "df_temp = pd.to_datetime(df_daily_rent_needs[\"started_at\"], format=\"mixed\")\n",
     "\n",
     "df_final = pd.merge(df_daily_rent_needs, df_weather_needs, how=\"left\", on=\"datetime\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "id": "35dae065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if missing data after merging\n",
+    "assert df_daily_rent.shape[0] == df_final.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c87c2427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to\n",
+    "df_final.to_csv(\"../data/raw/final.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f17ad0e",
+   "metadata": {},
+   "source": [
+    "## 4. Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3f6336ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp = pd.to_datetime(df_final[\"datetime\"])\n",
+    "\n",
+    "df_final[\"time\"] = pd.DataFrame(df_temp.dt.strftime(\"%H:%M\"))\n",
+    "df_final[\"dow\"] =pd.DataFrame(df_temp.dt.day_name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "62d01f27",
    "metadata": {},
    "outputs": [
@@ -88,6 +157,8 @@
        "      <th></th>\n",
        "      <th>started_at</th>\n",
        "      <th>datetime</th>\n",
+       "      <th>time</th>\n",
+       "      <th>dow</th>\n",
        "      <th>icon</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -96,30 +167,40 @@
        "      <th>0</th>\n",
        "      <td>2020-05-30 17:25:29</td>\n",
        "      <td>2020-05-30</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>rain</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2020-05-09 14:42:04</td>\n",
        "      <td>2020-05-09</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>Saturday</td>\n",
        "      <td>partly-cloudy-day</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2020-05-24 17:27:19</td>\n",
        "      <td>2020-05-24</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>Sunday</td>\n",
        "      <td>cloudy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2020-05-27 15:29:52</td>\n",
        "      <td>2020-05-27</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>Wednesday</td>\n",
        "      <td>partly-cloudy-day</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2020-05-31 14:06:03</td>\n",
        "      <td>2020-05-31</td>\n",
+       "      <td>00:00</td>\n",
+       "      <td>Sunday</td>\n",
        "      <td>partly-cloudy-day</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -127,31 +208,21 @@
        "</div>"
       ],
       "text/plain": [
-       "            started_at    datetime               icon\n",
-       "0  2020-05-30 17:25:29  2020-05-30               rain\n",
-       "1  2020-05-09 14:42:04  2020-05-09  partly-cloudy-day\n",
-       "2  2020-05-24 17:27:19  2020-05-24             cloudy\n",
-       "3  2020-05-27 15:29:52  2020-05-27  partly-cloudy-day\n",
-       "4  2020-05-31 14:06:03  2020-05-31  partly-cloudy-day"
+       "            started_at    datetime   time        dow               icon\n",
+       "0  2020-05-30 17:25:29  2020-05-30  00:00   Saturday               rain\n",
+       "1  2020-05-09 14:42:04  2020-05-09  00:00   Saturday  partly-cloudy-day\n",
+       "2  2020-05-24 17:27:19  2020-05-24  00:00     Sunday             cloudy\n",
+       "3  2020-05-27 15:29:52  2020-05-27  00:00  Wednesday  partly-cloudy-day\n",
+       "4  2020-05-31 14:06:03  2020-05-31  00:00     Sunday  partly-cloudy-day"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_final.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "30daea0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_final.to_csv(\"../data/raw/final.csv\", index=False)"
    ]
   }
  ],
