--- a/notebook/experiment.ipynb
+++ b/notebook/experiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4b054c67",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e856fe63",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_127413/1505384709.py:1: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_194094/1505384709.py:1: DtypeWarning: Columns (5,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_daily_rent = pd.read_csv(\"../data/raw/daily_rent_detail.csv\")\n"
      ]
     }
@@ -51,13 +51,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "2a195f1b",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_daily_rent_copy = df_daily_rent.copy()\n",
     "df_weather_copy = df_weather.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5a15da47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16086672, 13)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_daily_rent_copy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1acbb091",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated ride_id amount: 141\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check duplicated ride_id \n",
+    "check_duplicates = df_daily_rent_copy.duplicated(subset=\"ride_id\").sum()\n",
+    "print(\"Duplicated ride_id amount:\", check_duplicates)\n",
+    "\n",
+    "# Drop duplicated ride_id \n",
+    "df_daily_rent_copy = df_daily_rent_copy.drop_duplicates(subset=\"ride_id\", keep='first')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "17bb69e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16086531, 13)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_daily_rent_copy.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b7d2bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>start_station_name</th>\n",
+       "      <td>1450130</td>\n",
+       "      <td>9.014560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start_station_id</th>\n",
+       "      <td>1450130</td>\n",
+       "      <td>9.014560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>end_station_name</th>\n",
+       "      <td>1558227</td>\n",
+       "      <td>9.686532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>end_station_id</th>\n",
+       "      <td>1558876</td>\n",
+       "      <td>9.690567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start_lat</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.000062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start_lng</th>\n",
+       "      <td>10</td>\n",
+       "      <td>0.000062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>end_lat</th>\n",
+       "      <td>25916</td>\n",
+       "      <td>0.161104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>end_lng</th>\n",
+       "      <td>25916</td>\n",
+       "      <td>0.161104</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      count   percent\n",
+       "start_station_name  1450130  9.014560\n",
+       "start_station_id    1450130  9.014560\n",
+       "end_station_name    1558227  9.686532\n",
+       "end_station_id      1558876  9.690567\n",
+       "start_lat                10  0.000062\n",
+       "start_lng                10  0.000062\n",
+       "end_lat               25916  0.161104\n",
+       "end_lng               25916  0.161104"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 1. Calculate amount & percent\n",
+    "check_nan = df_daily_rent_copy.isna().sum()\n",
+    "check_nan_percent = df_daily_rent_copy.isna().mean() * 100\n",
+    "\n",
+    "# 2. Merge to data frame\n",
+    "# axis=1 merge by col\n",
+    "nan_summary = pd.concat([check_nan, check_nan_percent], axis=1)\n",
+    "\n",
+    "# 3. Set col name\n",
+    "nan_summary.columns = [\"count\", \"percent\"]\n",
+    "\n",
+    "# 4. Display if nan amount > 0\n",
+    "display(nan_summary[nan_summary[\"count\"] > 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a018d9fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop nan\n",
+    "df_daily_rent_copy = df_daily_rent_copy.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7bc60c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13928123, 13)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_daily_rent_copy.shape"
    ]
   },
   {
@@ -70,35 +275,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "dd44a09e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Retrive necessary features from raw data\n",
-    "df_weather_needs = df_weather_copy[[\"datetime\",\"icon\"]]\n",
-    "df_daily_rent_needs = df_daily_rent_copy[[\"started_at\"]]\n",
+    "df_weather_needs = df_weather_copy[[\"datetime\",\"icon\"]].copy()\n",
+    "df_daily_rent_needs = df_daily_rent_copy[[\"started_at\"]].copy()\n",
     "\n",
     "# Create necessary data by merging from raw data \n",
     "df_temp = pd.to_datetime(df_daily_rent_needs[\"started_at\"], format=\"mixed\")\n",
-    "\n",
+    "df_daily_rent_needs[\"datetime\"] = df_temp.dt.strftime(\"%Y-%m-%d\")\n",
     "df_final = pd.merge(df_daily_rent_needs, df_weather_needs, how=\"left\", on=\"datetime\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "35dae065",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check if missing data after merging\n",
-    "assert df_daily_rent.shape[0] == df_final.shape[0]"
+    "assert df_daily_rent_copy.shape[0] == df_final.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "c87c2427",
    "metadata": {},
    "outputs": [],
@@ -117,20 +322,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "3f6336ed",
+   "execution_count": 63,
+   "id": "2cfccbff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_temp = pd.to_datetime(df_final[\"datetime\"])\n",
-    "\n",
-    "df_final[\"time\"] = pd.DataFrame(df_temp.dt.strftime(\"%H:%M\"))\n",
-    "df_final[\"dow\"] =pd.DataFrame(df_temp.dt.day_name())"
+    "df_raw = pd.read_csv(\"../data/raw/final.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
+   "id": "9a3e8620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df_raw.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f6336ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp = pd.to_datetime(df[\"started_at\"], format=\"mixed\")\n",
+    "\n",
+    "df[\"time\"] = pd.DataFrame(df_temp.dt.strftime(\"%H:%M\"))\n",
+    "df[\"dow\"] =pd.DataFrame(df_temp.dt.day_name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "ad0b98e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "season_map = {\n",
+    "    1: 'winter', 2: 'spring', 3: 'spring', 4: 'spring',\n",
+    "    5: 'summer', 6: 'summer', 7: 'summer',\n",
+    "    8: 'autumn', 9: 'autumn', 10: 'autumn',\n",
+    "    11: 'winter', 12: 'winter'\n",
+    "}\n",
+    "\n",
+    "df[\"season\"] = df_temp.dt.month.map(season_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "62d01f27",
    "metadata": {},
    "outputs": [
@@ -157,9 +399,11 @@
        "      <th></th>\n",
        "      <th>started_at</th>\n",
        "      <th>datetime</th>\n",
+       "      <th>icon</th>\n",
        "      <th>time</th>\n",
        "      <th>dow</th>\n",
-       "      <th>icon</th>\n",
+       "      <th>month</th>\n",
+       "      <th>season</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -167,62 +411,79 @@
        "      <th>0</th>\n",
        "      <td>2020-05-30 17:25:29</td>\n",
        "      <td>2020-05-30</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>Saturday</td>\n",
        "      <td>rain</td>\n",
+       "      <td>17:25</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>05</td>\n",
+       "      <td>summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2020-05-09 14:42:04</td>\n",
        "      <td>2020-05-09</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>Saturday</td>\n",
        "      <td>partly-cloudy-day</td>\n",
+       "      <td>14:42</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>05</td>\n",
+       "      <td>summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2020-05-24 17:27:19</td>\n",
        "      <td>2020-05-24</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>Sunday</td>\n",
        "      <td>cloudy</td>\n",
+       "      <td>17:27</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>05</td>\n",
+       "      <td>summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2020-05-27 15:29:52</td>\n",
        "      <td>2020-05-27</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>Wednesday</td>\n",
        "      <td>partly-cloudy-day</td>\n",
+       "      <td>15:29</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>05</td>\n",
+       "      <td>summer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2020-05-31 14:06:03</td>\n",
        "      <td>2020-05-31</td>\n",
-       "      <td>00:00</td>\n",
-       "      <td>Sunday</td>\n",
        "      <td>partly-cloudy-day</td>\n",
+       "      <td>14:06</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>05</td>\n",
+       "      <td>summer</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            started_at    datetime   time        dow               icon\n",
-       "0  2020-05-30 17:25:29  2020-05-30  00:00   Saturday               rain\n",
-       "1  2020-05-09 14:42:04  2020-05-09  00:00   Saturday  partly-cloudy-day\n",
-       "2  2020-05-24 17:27:19  2020-05-24  00:00     Sunday             cloudy\n",
-       "3  2020-05-27 15:29:52  2020-05-27  00:00  Wednesday  partly-cloudy-day\n",
-       "4  2020-05-31 14:06:03  2020-05-31  00:00     Sunday  partly-cloudy-day"
+       "            started_at    datetime               icon   time        dow month  \\\n",
+       "0  2020-05-30 17:25:29  2020-05-30               rain  17:25   Saturday    05   \n",
+       "1  2020-05-09 14:42:04  2020-05-09  partly-cloudy-day  14:42   Saturday    05   \n",
+       "2  2020-05-24 17:27:19  2020-05-24             cloudy  17:27     Sunday    05   \n",
+       "3  2020-05-27 15:29:52  2020-05-27  partly-cloudy-day  15:29  Wednesday    05   \n",
+       "4  2020-05-31 14:06:03  2020-05-31  partly-cloudy-day  14:06     Sunday    05   \n",
+       "\n",
+       "   season  \n",
+       "0  summer  \n",
+       "1  summer  \n",
+       "2  summer  \n",
+       "3  summer  \n",
+       "4  summer  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_final.head()"
+    "df.head()"
    ]
   }
  ],
