modeling: scikit-learn modeling

--- a/notebook/experiment.ipynb
+++ b/notebook/experiment.ipynb
@@ -1843,29 +1843,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 579,
-   "id": "c19ea8a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_bias(X: np.ndarray) -> np.ndarray:\n",
-    "    X_bias = np.column_stack((np.ones(X.shape[0]), X))\n",
-    "    return X_bias"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 580,
-   "id": "8ba6968a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add Bias\n",
-    "X_train = add_bias(X_train_scaled)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9b49f131",
    "metadata": {},
@@ -1995,6 +1972,21 @@
    "metadata": {},
    "source": [
     "### 7.1. Fit model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c19ea8a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_bias(X: np.ndarray) -> np.ndarray:\n",
+    "    X_bias = np.column_stack((np.ones(X.shape[0]), X))\n",
+    "    return X_bias\n",
+    "\n",
+    "# Add Bias\n",
+    "X_train_poly = add_bias(X_train_scaled)"
    ]
   },
   {
@@ -4165,7 +4157,7 @@
    "id": "6b996585",
    "metadata": {},
    "source": [
-    "## 7.2. Validation"
+    "### 7.2. Validation"
    ]
   },
   {
@@ -4307,7 +4299,7 @@
    "id": "84712b89",
    "metadata": {},
    "source": [
-    "## 7.3. Testing"
+    "### 7.3. Testing"
    ]
   },
   {
